force-app/main/default/objects/Forecast_Product__c/Forecast_Product__c.object-meta.xml
<CustomObject>
    <label>Forecast Product</label>
    <nameField>
        <displayFormat>FP-{0000}</displayFormat>
        <label>Forecast Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>