force-app/main/default/objects/Forecast_Product__c/fields/Account_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_SAP_Code__c</fullName>
    <formula>Account__r.SAP_Code__c</formula>
    <label>Account SAP Code</label>
    <type>Text</type>
</CustomField>