force-app/main/default/objects/Forecast_Product__c/fields/Direct_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Direct_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Enabled</label>
    <type>Checkbox</type>
</CustomField>