force-app/main/default/objects/Forecast_Product__c/fields/Forecasting_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Forecasting_Enabled__c</fullName>
    <formula>Account__r.Forecast_Enabled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasting Enabled</label>
    <type>Checkbox</type>
</CustomField>