force-app/main/default/objects/Forecast_Product__c/fields/Local_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Local_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Enabled</label>
    <type>Checkbox</type>
</CustomField>