force-app/main/default/objects/Forecast_Product__c/fields/Local_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Local_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Forecast Products</relationshipLabel>
    <relationshipName>Forecast_Products</relationshipName>
    <type>Lookup</type>
</CustomField>