force-app/main/default/objects/Forecast_Product__c/fields/Product_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Product_Enabled__c</fullName>
    <formula>OR( Local_Enabled__c , Direct_Enabled__c)</formula>
    <inlineHelpText>Product is enabled if any of shipments methods is enabled.</inlineHelpText>
    <label>Product Enabled</label>
    <type>Checkbox</type>
</CustomField>