force-app/main/default/objects/Forecast_Product__c/fields/Product_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_SAP_Code__c</fullName>
    <formula>Product__r.SAP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product SAP Code</label>
    <type>Text</type>
</CustomField>