force-app/main/default/objects/Forecast_Product__c/validationRules/ProductRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductRequired</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product is required.</errorMessage>
</ValidationRule>